correction visibles button & loader

--- a/src/index.css
+++ b/src/index.css
@@ -226,5 +226,6 @@ img {
 
 .wrapBtn {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
